# shoppy

./: .envrc  .gitignore  README  README.md  categories.json  config.py  default.nix  flake.nix  helpers.py  input.txt  install  install.py  main.py  ops  post.py  pyproject.toml  setup.py  shopping_list.md  shopping_list.txt  shoppy  store-order.txt  test-input.txt  version
shoppy/: __init__.py  command_line.py  main.py
src/: _shoppy  cli.py  main.py
src/shoppy/: __init__.py  __main__.py  shopping_list.py
