[project]
name = "shoppy"
authors = [{ name = "O. C. Taskin", email = "orhuncenktaskin@gmail.com" }]
version = "0.1"
dependencies = ["pyfzf", "termcolor"]
description = "a simple script as a minimalist replacement for shopping list apps"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
shoppy = "shoppy.__main__:main"
